--- a/TrainingWPF/Pages/Registration.xaml
+++ b/TrainingWPF/Pages/Registration.xaml
@@ -13,29 +13,29 @@
 
     </Page.Background>-->
     <Grid  HorizontalAlignment="Center">
-       
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel>
             <GroupBox Style="{StaticResource gpText}" Header="Введите фамилию" Grid.Row="0">
-                <TextBox Name="tbSurname"></TextBox>
+                <TextBox MaxLength="20" Name="tbSurname"></TextBox>
             </GroupBox>
             <GroupBox Style="{StaticResource gpText}" Header="Введите имя">
-                <TextBox Name="tbName" />
+                <TextBox MaxLength="15" Name="tbName" />
             </GroupBox>
             <GroupBox Style="{StaticResource gpText}" Header="Введите отчество">
-                <TextBox Name="tbPatronymic"></TextBox>
+                <TextBox MaxLength="20" Name="tbPatronymic"></TextBox>
             </GroupBox>
             <GroupBox Style="{StaticResource gpText}" Header="Введите логин">
-                <TextBox Name="tbLogin"></TextBox>
+                <TextBox MaxLength="20" Name="tbLogin"></TextBox>
             </GroupBox>
 
 
             <GroupBox Style="{StaticResource gpText}" Header="Введите пароль" >
 
                 <StackPanel Orientation="Horizontal">
-                    <TextBox Name="tbPasswordTB" Height="20" Width="200" Visibility="Collapsed" >
+                    <TextBox MaxLength="30" Name="tbPasswordTB" Height="20" Width="200" Visibility="Collapsed" >
 
                         <TextBox.ToolTip>
 
@@ -52,7 +52,7 @@
                             </TextBlock>
                         </TextBox.ToolTip>
                     </TextBox>
-                    <PasswordBox Name="tbPassword" Height="20" Width="200" >
+                    <PasswordBox MaxLength="30" Name="tbPassword" Height="20" Width="200" >
 
                         <PasswordBox.ToolTip>
 
@@ -77,7 +77,7 @@
             <GroupBox Style="{StaticResource gpText}"  Header="Повторно введите пароль" >
 
                 <StackPanel Orientation="Horizontal">
-                    <TextBox Name="tbPasswordTB1" Height="20" Width="200" Visibility="Collapsed" >
+                    <TextBox MaxLength="30" Name="tbPasswordTB1" Height="20" Width="200" Visibility="Collapsed" >
 
                         <TextBox.ToolTip>
 
@@ -94,7 +94,7 @@
                             </TextBlock>
                         </TextBox.ToolTip>
                     </TextBox>
-                    <PasswordBox Name="tbPassword2" Height="20" Width="200" >
+                    <PasswordBox MaxLength="30" Name="tbPassword2" Height="20" Width="200" >
                         <PasswordBox.ToolTip>
                             <TextBlock >
                                 Требования к паролю:
@@ -122,7 +122,7 @@
 
 
             </StackPanel>
-        
+
 
 
             <StackPanel HorizontalAlignment="Center" Margin="6 4 0 2" Orientation="Horizontal">
@@ -142,12 +142,12 @@
                 <Button Margin="0 15 0 10" Template="{StaticResource btnTemp}" Name="btnReg" Click="btnReg_Click" Content="Зарегистрироваться"/>
                 <Button Template="{StaticResource btnTemp}" Name="btnBack" Click="btnBack_Click" Content="Назад"/>
             </StackPanel>
-          
+
 
 
 
         </StackPanel>
-       
+
     </Grid>
 
 </Page>
