--- a/TrainingWPF/Pages/AdminPage2.xaml
+++ b/TrainingWPF/Pages/AdminPage2.xaml
@@ -45,6 +45,7 @@
                 </TextBox>
             </GroupBox>
             <Button Margin="0 15 0 0" Width="150" BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Сброс фильтра" Click="Button_Click"></Button>
+            <Button Margin="0 15 0 0" Width="150" BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Заказ" Click="Button_Click_1"/>
         </StackPanel>
         <DataGrid Background="#f5d2aa" Name="dg" ColumnWidth="*" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" Height="400" AutoGenerateColumns="False"  CanUserAddRows="False" IsReadOnly="True">
             <DataGrid.Columns>
