--- a/TrainingWPF/Pages/ShowMenu.xaml
+++ b/TrainingWPF/Pages/ShowMenu.xaml
@@ -1,30 +1,36 @@
 ﻿<Page x:Class="TrainingWPF.Pages.ShowMenu"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TrainingWPF.Pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Background="White"
-      Title="ShowMenu">
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:local="clr-namespace:TrainingWPF.Pages"
+mc:Ignorable="d"
+d:DesignHeight="450" d:DesignWidth="800"
+Background="White"
+Title="ShowMenu">
     <Page.Resources>
         <BitmapImage x:Key="defaultImage" UriSource="/Resources/nophoto.png"/>
     </Page.Resources>
     <Grid>
-        <ListView Name="lVMenu">
+        <ListView Name="lVMenu" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel HorizontalAlignment="Center"></WrapPanel>
+                    <WrapPanel HorizontalAlignment="Center" />
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
 
 
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding idStatus}"/>
+                    <StackPanel Height="200" Width="150">
+                        <TextBlock Text="{Binding titile}" TextWrapping="Wrap"/>
                         <Image Width="100" Height="100" Source="{Binding Photo, TargetNullValue={StaticResource defaultImage}}"/>
+                        <TextBlock Text="{Binding description}" TextWrapping="Wrap"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding price}"/>
+                            <TextBlock Text=" руб."/>
+                        </StackPanel>
+                        <Button x:Name="addMenu" Click="addMenu_Click" Content="Добавить" Tag="{Binding idMenu}" Template="{StaticResource btnTemp}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
