изменение страницы заказов

--- a/TrainingWPF/Pages/Autorization.xaml
+++ b/TrainingWPF/Pages/Autorization.xaml
@@ -35,8 +35,11 @@
         <StackPanel  Grid.Row="1" HorizontalAlignment="Center" Orientation="Vertical" Margin="0 50 0 0">
             <Button Margin="0 0 0 10" Template="{StaticResource btnTemp}" Name="btnAuth" Click="btnAuth_Click" Content="Авторизация" ></Button>
             <Button Template="{StaticResource btnTemp}" Name="btngoBack" Click="btngoBack_Click" Content="Назад"></Button>
-
+            <StackPanel Margin="0 15 0 0">
+                <TextBlock MouseDown="TextBlock_MouseDown">У меня нет аккаунта</TextBlock>
+            </StackPanel>
         </StackPanel>
+    
 
 
 
