--- a/TrainingWPF/Pages/Order.xaml
+++ b/TrainingWPF/Pages/Order.xaml
@@ -11,11 +11,14 @@
     <Page.Resources>
         <BitmapImage x:Key="defaultImage" UriSource="/Resources/nophoto.png"/>
     </Page.Resources>
-    <Grid>
+
+
+
+    <Grid Background="#f5d2aa">
         <StackPanel Orientation="Vertical">
-            <ListView Name="lVMenu1">
+            <ListView Name="lVMenu1" Height="350" Background="#f5d2aa">
                 <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
+                    <ItemsPanelTemplate >
                         <WrapPanel HorizontalAlignment="Center"></WrapPanel>
                     </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
@@ -23,34 +26,65 @@
 
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Background="{Binding backgroud}">
-                            <StackPanel Orientation='Horizontal'>
-                                <TextBlock Text="{Binding Users.Surname}"/>
-                                <TextBlock Text=" "/>
-                                <TextBlock Text="{Binding Users.Name}"/>
-                                <TextBlock Text=" "/>
-                                <TextBlock Text="{Binding Users.Patronymic}"/>
+                        <Border BorderThickness="4" CornerRadius="20, 0, 0, 20">
+
+
+                            <StackPanel Background="{Binding backgroud}" HorizontalAlignment="Center">
+
+
+                                <StackPanel Orientation='Horizontal'  HorizontalAlignment="Center">
+                                    <TextBlock Text="{Binding Users.Surname}"/>
+                                    <TextBlock Text=" "/>
+                                    <TextBlock Text="{Binding Users.Name}"/>
+                                    <TextBlock Text=" "/>
+                                    <TextBlock Text="{Binding Users.Patronymic}"/>
+                                </StackPanel>
+
+
+                                <StackPanel Orientation='Horizontal' HorizontalAlignment="Center">
+                                    <TextBlock Text="Сумма заказа - "/>
+                                    <TextBlock Name="Summ" Text="{Binding sum}"/>
+                                    <TextBlock Text=" руб."/>
+                                </StackPanel>
+                                <StackPanel HorizontalAlignment="Center">
+                                    <TextBlock HorizontalAlignment="Center" Text="Дата заказа: "/>
+                                    <TextBlock Name="datetime" Text="{Binding datetime,ConverterCulture=RU, StringFormat={}dd MMMM yyyy года}"/>
+                                </StackPanel>
+
+                                <StackPanel HorizontalAlignment="Center">
+
+                                    <TextBlock HorizontalAlignment="Center" Text="Статус заказа: "/>
+                                    <TextBlock HorizontalAlignment="Center" Name="status" FontWeight="Bold" Text="{Binding Status.statustype}"/>
+
+
+                                </StackPanel>
+                              
+
+                                <Button Margin="0 2 0 0" Name="SostavZakaz"  Click="SostavZakaz_Click" Content="Состав заказа" Tag="{Binding idZakaz}" Template="{StaticResource btnTemp}"/>
                             </StackPanel>
-                            <StackPanel Orientation='Horizontal'>
-                                <TextBlock Name="Summ" Text="{Binding sum}"/>
-                                <TextBlock Text=" руб."/>
-                            </StackPanel>
-                            <TextBlock Name="datetime" Text="{Binding datetime,ConverterCulture=RU, StringFormat={}dd MMMM yyyy года}"/>
-                            <TextBlock Name="status" Text="{Binding Status.statustype}"/>
-                            <Button Name="SostavZakaz"  Click="SostavZakaz_Click" Content="Состав заказа" Tag="{Binding idZakaz}" Template="{StaticResource btnTemp}"/>
-                        </StackPanel>
+                        </Border>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Cумма всех заказов: "/>
-                <TextBlock Name="SumZakazov"/>
-                <TextBlock Text="    "/>
-                <TextBlock Text="Заказов в работе: "/>
-                <TextBlock Name="ZakazovRabota"/>
-            </StackPanel>
-            <Button Template="{StaticResource btnTemp}" Name="btngoBack" Click="btngoBack_Click" Content="Назад"></Button>
+                <StackPanel Orientation="Horizontal">
 
+                    <TextBlock Text="Cумма всех заказов: "/>
+                    <TextBlock Name="SumZakazov"/>
+                    <TextBlock Text="    "/>
+                    <TextBlock Text="Заказов в работе: "/>
+                    <TextBlock Name="ZakazovRabota"/>
+                </StackPanel>
+
+            </StackPanel>
+            <StackPanel>
+            </StackPanel>
+            <StackPanel HorizontalAlignment="Right" Margin="0 0 15 0">
+
+                <Button Template="{StaticResource btnTemp}" Name="btngoBack" Click="btngoBack_Click" Content="Назад" />
+
+            </StackPanel>
         </StackPanel>
+
     </Grid>
 </Page>
