--- a/TrainingWPF/Pages/Order.xaml
+++ b/TrainingWPF/Pages/Order.xaml
@@ -27,11 +27,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Border BorderThickness="4" CornerRadius="20, 0, 0, 20">
-
-
                             <StackPanel Background="{Binding backgroud}" HorizontalAlignment="Center">
-
-
                                 <StackPanel Orientation='Horizontal'  HorizontalAlignment="Center">
                                     <TextBlock Text="{Binding Users.Surname}"/>
                                     <TextBlock Text=" "/>
@@ -39,8 +35,6 @@
                                     <TextBlock Text=" "/>
                                     <TextBlock Text="{Binding Users.Patronymic}"/>
                                 </StackPanel>
-
-
                                 <StackPanel Orientation='Horizontal' HorizontalAlignment="Center">
                                     <TextBlock Text="Сумма заказа - "/>
                                     <TextBlock Name="Summ" Text="{Binding sum}"/>
@@ -61,6 +55,9 @@
                               
 
                                 <Button Margin="0 2 0 0" Name="SostavZakaz"  Click="SostavZakaz_Click" Content="Состав заказа" Tag="{Binding idZakaz}" Template="{StaticResource btnTemp}"/>
+                                
+                                <Button Margin="0 2 0 0" Name="Редактировать"  Click="Редактировать_Click" Content="Редактировать" Tag="{Binding idZakaz}" Template="{StaticResource btnTemp}"/>
+                                <Button Margin="0 2 0 0" Name="Удалить"  Click="Удалить_Click" Content="Удалить " Tag="{Binding idZakaz}" Template="{StaticResource btnTemp}"/>
                             </StackPanel>
                         </Border>
                     </DataTemplate>
@@ -81,7 +78,7 @@
             </StackPanel>
             <StackPanel  Orientation="Horizontal" HorizontalAlignment="Right" >
 
-                <Button Margin="0 0 15 0" Template="{StaticResource btnTemp}" Name="btnAdd" Click="btnAdd_Click" Content="Добавить" />
+           
                 <Button Template="{StaticResource btnTemp}" x:Name="btngoBack" Click="btngoBack_Click" Content="Назад" />
             </StackPanel>
            
