дизайн страницы с изменением

--- a/TrainingWPF/Pages/AddOrder.xaml
+++ b/TrainingWPF/Pages/AddOrder.xaml
@@ -7,48 +7,51 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddOrder">
-   
-        <Grid Background="#f5d2aa">
+
+    <Grid Background="#f5d2aa">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+           
         </Grid.RowDefinitions>
-        <StackPanel>
-            <GroupBox Header="Выбор блюда" Style="{StaticResource gpText}">
-                <ComboBox Name="cmbBludo" SelectionChanged="cmbBludo_SelectionChanged">
-                    
-                </ComboBox>
-            </GroupBox>
-            <GroupBox Header="Введите количество">
+        <StackPanel Margin="0,0,0,5">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >  
+                <GroupBox Header="Выбор блюда" Style="{StaticResource gpText}" Width="250" >
+                    <ComboBox Name="cmbBludo" SelectionChanged="cmbBludo_SelectionChanged"/>
+                </GroupBox>
+                <GroupBox Header="Выберите статус или оставьте текущий" Width="250" Style="{StaticResource gpText}">
+                    <ComboBox Name="STATUS"/>
+                </GroupBox>
+            </StackPanel>
+            
+            <GroupBox Header="Введите количество " Style="{StaticResource gpText}" Width="500">
                 <TextBox Name="tb1" MaxLength="2 " KeyUp="TextBox_KeyUp" >
-                    
+
                 </TextBox>
             </GroupBox>
-            <GroupBox>
-                <ComboBox Name="STATUS">
-                    
-                </ComboBox>
-            </GroupBox>
+           
         </StackPanel>
         <StackPanel Grid.Row="1">
-            <ListView Name="lVMenu" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Height="100">
+            <ListView Name="lVMenu" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Height="300" Width="500" >
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel HorizontalAlignment="Center" />
                     </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
-            
+
             </ListView>
         </StackPanel>
-        <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="0">
-            <Button x:Name="add" Content="Добавить" HorizontalAlignment="Center" Margin="0 125 0 0" Click="add_Click"/>
-            <Button x:Name="del" Content="Удалить" HorizontalAlignment="Center" Margin="0 125 0 0" Click="del_Click"/>
+        <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="0" Margin="0 80 0 0">
+            <Button x:Name="add" BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Добавить"  Click="add_Click"/>
+            <Button x:Name="del"  BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Удалить" HorizontalAlignment="Center" Margin="15 0 0 0" Click="del_Click"/>
+
         </StackPanel>
-        <StackPanel Grid.Row="2">
-            <Button Height="100" Content="Изменить" Click="Button_Click">
-                
-            </Button>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 -76 0 0">
+
+            <Button BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Назад" Click="Button_Click_1"/>
+            <Button BorderThickness="0.1" Template="{StaticResource btnTemp}" Content="Изменить"  Margin="15 0 0 0" Click="Button_Click"/>
+
         </StackPanel>
     </Grid>
 </Page>
